*COMPLETED* - control for chunkCrossfadeSamples
*TO-DO*
- drop entire folder ability to successfully parse

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         include/FFTProcessor.h
         backend/AudioFileParse.cpp
         include/AudioFileParse.h
+        poweroftwospinbox.h poweroftwospinbox.cpp
 
 
 
